[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/game/char/Person.gd" type="Script" id=1]
[ext_resource path="res://src/game/char/state/Walk.gd" type="Script" id=2]
[ext_resource path="res://src/game/char/state/Fall.gd" type="Script" id=3]
[ext_resource path="res://src/game/char/state/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/game/char/state/Jump.gd" type="Script" id=5]
[ext_resource path="res://src/game/char/state/Jetpack.gd" type="Script" id=6]
[ext_resource path="res://assets/circle.tres" type="Texture" id=7]
[ext_resource path="res://assets/square.tres" type="Texture" id=8]
[ext_resource path="res://assets/triangle.tres" type="Texture" id=9]
[ext_resource path="res://modules/StateMachine/StateMachine.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/game/char/state/Attack.gd" type="Script" id=11]
[ext_resource path="res://src/game/char/state/PrepareAttack.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=6]
radius = 22.0227

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 5 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Racket:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -57.9779, 120.0, 30.5111 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Colliders/AttackArea2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "HoldAttack"
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Racket:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Racket:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 30.5111, -57.9779, -71.1627 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Racket:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.447384, 0.820709 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Racket:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Racket:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30.5111 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Racket:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.447384, 0.820709 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Colliders/AttackArea2D:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Person" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="VisualInstance" type="Node2D" parent="."]

[node name="Jetpack" type="Node2D" parent="VisualInstance"]
position = Vector2( -5, -17 )

[node name="Square" type="Sprite" parent="VisualInstance/Jetpack"]
position = Vector2( -4.2, 1.60001 )
rotation = 0.294746
scale = Vector2( 0.4, 0.800001 )
texture = ExtResource( 8 )

[node name="Triangle" type="Sprite" parent="VisualInstance/Jetpack/Square"]
position = Vector2( -2.5, 13 )
scale = Vector2( 0.8, -0.449998 )
z_index = -1
texture = ExtResource( 9 )

[node name="Square2" type="Sprite" parent="VisualInstance/Jetpack"]
position = Vector2( -8.2, 3 )
rotation = 0.294746
scale = Vector2( 0.4, 0.800001 )
texture = ExtResource( 8 )

[node name="Triangle" type="Sprite" parent="VisualInstance/Jetpack/Square2"]
position = Vector2( -2.5, 13 )
scale = Vector2( 0.8, -0.449998 )
z_index = -1
texture = ExtResource( 9 )

[node name="Body" type="Sprite" parent="VisualInstance"]
position = Vector2( 0, -12 )
texture = ExtResource( 9 )

[node name="Head" type="Sprite" parent="VisualInstance"]
position = Vector2( 0, -24 )
scale = Vector2( 0.599998, 0.600001 )
texture = ExtResource( 7 )

[node name="Racket" type="Node2D" parent="VisualInstance"]
position = Vector2( 6, -11 )
rotation = 0.53252
scale = Vector2( 0.447384, 0.820709 )

[node name="Square" type="Sprite" parent="VisualInstance/Racket"]
position = Vector2( 0.93782, -5.9297 )
scale = Vector2( 0.218606, 0.711803 )
texture = ExtResource( 8 )

[node name="Circle2" type="Sprite" parent="VisualInstance/Racket"]
position = Vector2( 0.823919, -23.3353 )
texture = ExtResource( 7 )

[node name="Colliders" type="Node2D" parent="."]

[node name="AttackArea2D" type="Area2D" parent="Colliders"]
position = Vector2( 6, -11 )
collision_layer = 0
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/AttackArea2D"]
position = Vector2( 4, -6 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="GroundRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="StateMachine" parent="." instance=ExtResource( 10 )]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jetpack" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="HoldAttack" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/HoldAttack = SubResource( 5 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="Colliders/AttackArea2D" to="StateMachine/Attack" method="_on_AttackArea2D_body_entered"]
[connection signal="transition" from="StateMachine" to="." method="_on_StateMachine_transition"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attack" method="_on_AnimationPlayer_animation_finished"]
